Bug 1707389. If a page is horizontally scrollable make zooming out using double tap to zoom work. r=botond

The code in ZoomToRect that calculate the rect to zoom out to does not work if the page is horizontally scrollable, and our min zoom does not allow us to zoom out to fit the full page width.

For example, the targetZoom might get set to 0.1 and our min zoom is 1. The target zoom would get updated to 1, but the scroll offset of the rect wouldn't get adjusted for the new zoom.

So change how we calculate it by taking the min zoom and then calculating the scroll offset so the old visible area is centered in the new visible area.

Differential Revision: https://phabricator.services.mozilla.com/D113329